Basecamp Bug fix -PDP: Warranty Upsell Box -Collapsable PDP content

--- a/app/design/frontend/Dyode/curacao/Magento_Catalog/web/css/source/_add-to-cart.less
+++ b/app/design/frontend/Dyode/curacao/Magento_Catalog/web/css/source/_add-to-cart.less
@@ -484,6 +484,7 @@
           .top-section {
             clear: both;
             float: none;
+            position: relative;
 
             .modal-head {
               float: left;
@@ -524,6 +525,8 @@
             .modal-img {
               width: 15%;
               float: right;
+              position: absolute;
+              right: 0;
               @media all and (max-width: 990px) {
                 width: 15%;
               }
@@ -665,6 +668,7 @@
     clear: both;
     float: left;
     width: 100%;
+    margin-top: 25px; 
 
     h3 {
       color: @color-orange;
@@ -771,10 +775,6 @@
               -webkit-transform: rotate(40deg);
               -ms-transform: rotate(40deg);
               transform: rotate(40deg);
-              @media all and (max-width: 467px) {
-                left: 3px;
-                top: 1px;
-              }
             }
           }
         }
